# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Dec 14 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- In ResultSet.getObject() method added support for retrieving
  TIMESTAMP WITH TIME ZONE data as java.time.OffsetDateTime object
  and TIME WITH TIME ZONE as java.time.OffsetTime object.
  Also methods ResultSetMetaData.getColumnClassName() and
  ParameterMetaData.getParameterClassName() now return
  java.time.OffsetDateTime.class for columns of type TIMESTAMP WITH TIME ZONE
  and java.time.OffsetTime.class for columns of type TIME WITH TIME ZONE.

* Thu Oct 12 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved DatabaseMetaData.getSystemFunctions(). It now also returns
  functions: current_sessionid, greatest, ifnull, least, sql_max, sql_min.
  Function ifnull will only be returned for servers Jun2023 (11.47 or higher).

* Wed Aug  9 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Implemented ResultSet methods:
   <T> T getObject(int columnIndex, Class<T> type)
   <T> T getObject(String columnLabel, Class<T> type)
  They used to throw an SQLFeatureNotSupportedException.

* Thu Jul  6 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Removed deprecated nl.cwi.monetdb.*.* classes and package.
  Those classes were marked deprecated on 12 Nov 2020 from
  release 3.0 (released on 17 Feb 2021) onwards. It includes:
   nl.cwi.monetdb.client.JdbcClient.class
   nl.cwi.monetdb.jdbc.MonetDriver.class
   nl.cwi.monetdb.jdbc.types.INET.class
   nl.cwi.monetdb.jdbc.types.URL.class
   nl.cwi.monetdb.mcl.net.MapiSocket.class
  These classes are now removed permanently.
  Use the  org.monetdb.*  equivalents instead.

* Thu Jul  6 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Removed code to support old MonetDB servers Oct2014 or older. Those
  old servers did not yet have the system tables: sys.keywords and